cloud/pgadmin4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5050
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pgadmin
