cloud/pgadmin4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.lillecarl.com
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pgadmin.lillecarl.com
    secretName: pgadmin-tls
